--- a/index.html
+++ b/index.html
@@ -3,19 +3,27 @@
 		<title>Alaska: Attack On Planet Glamtron!</title>
     <link rel="shortcut icon" href="./assets/favicon_2.ico" type="image/x-icon">
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link rel="stylesheet" href="font-awesome.min.css">
+
 	</head>
 	<body>
-		<div class="game-container">
-			<img id="window-cover" src="assets/window-cover-4.png">
-			<canvas id="background" width="640" height="480">
-			</canvas>
+		<div class="bg">
+			<a href="https://github.com/nwilliams770" target="_blank" class="github">
+				<img src="assets/github-logo.png">
+			</a>
+			<a href="https://www.linkedin.com/in/nwilliams770/" target="_blank" class="linkedin">
+				<img src="assets/linkedin-logo.png">
+			</a>
+			<div class="game-container">
+				<img id="window-cover" src="assets/window-cover-4.png">
+				<canvas id="background" width="640" height="480">
+				</canvas>
 
-			<canvas id="main" width="640" height="480">
-			</canvas>
+				<canvas id="main" width="640" height="480">
+				</canvas>
 
-			<canvas id="alaska" width="640" height="480">
-			</canvas>
+				<canvas id="alaska" width="640" height="480">
+				</canvas>
+			</div>
 		</div>
 		<script src="attack_on_glamtron.js"></script>
 	</body>
