--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
 	</head>
 	<body>
 		<div class="bg">
-			<a href="https://github.com/nwilliams770" target="_blank" class="github">
-				<img src="assets/github-logo.png">
-			</a>
-			<a href="https://www.linkedin.com/in/nwilliams770/" target="_blank" class="linkedin">
-				<img src="assets/linkedin-logo.png">
-			</a>
 			<div class="game-container">
+				<!-- <div class="links">
+					<a href="https://github.com/nwilliams770" target="_blank" class="github">
+						<img src="assets/github-logo.png">
+					</a>
+					<a href="https://www.linkedin.com/in/nwilliams770/" target="_blank" class="linkedin">
+						<img src="assets/linkedin-logo.png">
+					</a>
+				</div> -->
+				<img id="title-screen" src="assets/titlescreen.gif" onclick="clearTitle()">
+				<div class="score">TO BE RESCUED: <span id="score"></span></div>
 				<img id="window-cover" src="assets/window-cover-4.png">
 				<canvas id="background" width="640" height="480">
 				</canvas>
@@ -25,6 +29,7 @@
 				</canvas>
 			</div>
 		</div>
-		<script src="attack_on_glamtron.js"></script>
+		<script src="game.js"></script>
+		<script src="objects.js"></script>
 	</body>
 </html>
