add score zone and player score

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 						<img src="assets/linkedin-logo.png">
 					</a>
 				</div> -->
-				<img id="title-screen" src="assets/titlescreen.gif" onclick="clearTitle()">
+				<!-- <img id="title-screen" src="assets/titlescreen.gif" onclick="clearTitle()"> -->
 				<div class="score">TO BE RESCUED: <span id="score"></span></div>
 				<img id="window-cover" src="assets/window-cover-4.png">
 				<canvas id="background" width="640" height="480">
