add restart and gameover functionality

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<title>Alaska: Attack On Planet Glamtron!</title>
     <link rel="shortcut icon" href="./assets/favicon_2.ico" type="image/x-icon">
 		<link rel="stylesheet" type="text/css" href="style.css">
-
+		<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 	</head>
 	<body>
 		<div class="bg">
@@ -16,7 +16,7 @@
 						<img src="assets/linkedin-logo.png">
 					</a>
 				</div> -->
-				<!-- <img id="title-screen" src="assets/titlescreen.gif" onclick="clearTitle()"> -->
+				<img id="title-screen" src="assets/titlescreen.gif" onclick="clearTitle()">
 				<div class="score">TO BE RESCUED: <span id="score"></span></div>
 				<img id="window-cover" src="assets/window-cover-4.png">
 				<canvas id="background" width="640" height="480">
