refactor image source

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<img id="intro-screen" src="assets/intro-screen.png" onkeydown="clearTitle(e)">
 				
 				<div class="score">TO BE RESCUED: <span id="score"></span></div>
-				<img id="window-cover" src="assets/window-cover-5.png">
+				<img id="window-cover" src="assets/Window-cover-5.png">
 				<canvas id="background" width="640" height="480">
 				</canvas>
 
