--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 	<body>
 		<div class="bg">
 			<div class="game-container">
-				<!-- <div class="links">
+				<div class="links">
 					<a href="https://github.com/nwilliams770" target="_blank" class="github">
 						<img src="assets/github-logo.png">
 					</a>
 					<a href="https://www.linkedin.com/in/nwilliams770/" target="_blank" class="linkedin">
 						<img src="assets/linkedin-logo.png">
 					</a>
-				</div> -->
+				</div>
 				<img id="title-screen" src="assets/titlescreen.gif" onkeydown="clearTitle(e)">
 				<img id="intro-screen" src="assets/intro-screen.png" onkeydown="clearTitle(e)">
 				
 				<div class="score">TO BE RESCUED: <span id="score"></span></div>
-				<img id="window-cover" src="assets/Window-cover-5.png">
+				<img id="window-cover" src="assets/window-cover-5.png">
 				<canvas id="background" width="640" height="480">
 				</canvas>
 
@@ -29,7 +29,7 @@
 
 				<canvas id="alaska" width="640" height="480">
 				</canvas>
-				<div class="game-over" id="game-over">GAME OVER
+				<div class="game-over" id="game-over">YOUR PEOPLE ARE SAVED!
 					<p>
 						<span onclick="game.restart()">Restart</span>
 					</p>
