refactor links for live site

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Alaska: Attack On Planet Glamtron!</title>
-    <link rel="shortcut icon" href="./assets/favicon_2.ico" type="image/x-icon">
+   		<link rel="shortcut icon" href="./assets/favicon_2.ico" type="image/x-icon">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 	</head>
@@ -20,7 +20,7 @@
 				<img id="intro-screen" src="assets/intro-screen.png" onkeydown="clearTitle(e)">
 				
 				<div class="score">TO BE RESCUED: <span id="score"></span></div>
-				<img id="window-cover" src="assets/window-cover-5.png">
+				<img id="window-cover" src="https://github.com/nwilliams770/alaska-attack-on-glamtron/blob/master/assets/Window-cover-5.png">
 				<canvas id="background" width="640" height="480">
 				</canvas>
 
@@ -29,7 +29,7 @@
 
 				<canvas id="alaska" width="640" height="480">
 				</canvas>
-				<div class="game-over" id="game-over">YOUR PEOPLE ARE SAVED!
+				<div class="game-over" id="game-over">YOU SAVED EM!
 					<p>
 						<span onclick="game.restart()">Restart</span>
 					</p>
