--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<img id="intro-screen" src="assets/intro-screen.png" onkeydown="clearTitle(e)">
 				
 				<div class="score">TO BE RESCUED: <span id="score"></span></div>
-				<img id="window-cover" src="https://github.com/nwilliams770/alaska-attack-on-glamtron/blob/master/assets/Window-cover-5.png">
+				<img id="window-cover" src="http://res.cloudinary.com/nwilliams770/image/upload/v1512761413/Window-cover-5_mq9eaw.png">
 				<canvas id="background" width="640" height="480">
 				</canvas>
 
